--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+*{
+  box-sizing: border-box;
+}
+html,body,#root{
+  height:100%;
+}
 body {
   margin: 0;
   padding: 0;
@@ -7,8 +13,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+a{
+  text-decoration: none;
 }
