--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
 *{
   box-sizing: border-box;
+  user-select: none;
 }
 html,body,#root{
   height:100%;
 }
 body {
+  -webkit-app-region: drag;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -15,4 +17,5 @@ body {
 }
 a{
   text-decoration: none;
+  color:white;
 }
