--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
 *{
   box-sizing: border-box;
   user-select: none;
+  -webkit-user-drag: none;
 }
 html,body,#root{
   height:100%;
 }
 body {
-  -webkit-app-region: drag;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
